--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <version>${appengine.target.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.12</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
@@ -168,14 +173,15 @@
                 <groupId>com.google.appengine</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>${appengine.target.version}</version>
-                <!--<configuration>-->
-                    <!--<jvmFlags>-->
+                <configuration>
+                    <jvmFlags>
+                        <jvmFlag>-Xms512m</jvmFlag>
+                        <jvmFlag>-Xmx2048m</jvmFlag>
                         <!--<jvmFlag>-Xdebug</jvmFlag>-->
-                        <!--<jvmFlag>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y-->
-                        <!--</jvmFlag>-->
-                    <!--</jvmFlags>-->
-                    <!--<disableUpdateCheck>true</disableUpdateCheck>-->
-                <!--</configuration>-->
+                        <!--<jvmFlag>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y</jvmFlag>-->
+                    </jvmFlags>
+                    <disableUpdateCheck>true</disableUpdateCheck>
+                </configuration>
             </plugin>
 
         </plugins>
